<resources>
    <string name="app_name">EnglishLearning</string>

    <string name="first_launch">Для начала работы с программой пройдите тест, состоящий из 16 вопросов, для определения уровня знаний
    языка. Если у вас уже есть аккаунт нажмите на кнопку авторизации.</string>
    <string name="authorization">Авторизация</string>
    <string name="start_test">Пройти тест</string>
    <string name="mpt_learning">MPT Learning</string>
    <string name="result_dialog">Ваш предполагаемый уровень знания английского языка:</string>
    <string name="result_dialog_2">Чтоб продолжить работу с приложением перейдите на окно регистрации</string>
    <string name="registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_1">Введите ваше имя и фамилию</string>
    <string name="registration_2">Для завершения регистрации введите адрес электронной почты, пароль и повтор пароля</string>
    <string name="reg_btn">Зарегистрироваться</string>
    <string name="auth_btn">Авторизоваться</string>
    <string name="volume_menu_string">Аудирование</string>
    <string name="aud_task_text">Вы услышите четыре коротких диалога, обозначенных А, B, C и D. Определите, где происходит каждый из этих диалогов. Используйте каждое место действия из списка 1–5 только один раз. В задании есть одно лишнее место действия. Вы услышите запись дважды. Занесите свои ответы в таблицу.1. On a street. 2. In the cinema. 3. In a classroom. 4. In an internet cafe. 5. At home</string>
    <string name="profile_menu">Профиль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="reading_menu">Чтение</string>
    <string name="translate_menu">Словарь</string>

    <string-array name="languages">
        <item>EN->RU</item>
        <item>RU->EN</item>
    </string-array>

</resources>