<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_res_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:text="@string/result_dialog"
        style="@style/TextViewBlack"
        android:textSize="18sp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/result_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_res_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:text="B1"
        style="@style/TextViewBlack"
        android:textSize="28sp"
        />
    <TextView
        android:id="@+id/text_res_2"
        app:layout_constraintTop_toBottomOf="@+id/result_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_dialog_2"
        android:layout_margin="10dp"
        style="@style/TextViewBlack"
        android:textSize="18sp"
        android:textAlignment="center"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_go_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_res_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        style="@style/TextViewLight"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>