<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstLaunchActivity"
        android:background="@color/tool_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="@drawable/panel_white">

            <TextView
                android:id="@+id/note_text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/first_launch"
                style="@style/TextViewBlack"
                android:textAlignment="center"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/authorization_button"
                app:layout_constraintTop_toBottomOf="@id/note_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorization"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                style="@style/TextViewLight"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_test_button"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="@id/authorization_button"
                app:layout_constraintEnd_toEndOf="@id/authorization_button"
                app:layout_constraintBottom_toTopOf="@id/authorization_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_test"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                style="@style/TextViewLight"
                android:textAlignment="center"
                android:textSize="20sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>